fix card value align

--- a/apps/ligretto-recovery/src/components/card/Card.module.scss
+++ b/apps/ligretto-recovery/src/components/card/Card.module.scss
@@ -11,7 +11,6 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
   user-select: none;
 
   &:hover {
@@ -50,11 +49,11 @@
     background-size: 100%;
     opacity: 1;
   }
-}
 
-.value {
-  color: #fff;
-  font-size: 5rem;
-  text-align: center;
-  font-weight: bold;
+  .value {
+    color: #fff;
+    font-size: 5rem;
+    text-align: center;
+    font-weight: bold;
+  }
 }
